# handwritingRemover

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: eval_grid.py
scripts/: annotate.py  bench_gpu.py  calibrate_resnet_threshold.py  compare_backbones.py  compare_binarize.py  compare_resnet_size.py  diagnose_m1.py  iterate_hw.py  train_resnet_hw_classifier.py
src/inkstrip/: __init__.py  api.py  cli.py  config.py  routing.py  types.py
src/inkstrip/detect/: base.py  hw_classifier.py  hw_finetuned.py  ocr_rapid.py  yolo_hw.py
src/inkstrip/inpaint/: base.py  lama_onnx.py  lama_torch.py  paper_fill.py  tile_blend.py
src/inkstrip/io/: loaders.py  savers.py
src/inkstrip/mask/: base.py  color.py  morph.py  ocr_inverse.py
src/inkstrip/models/: registry.py  weights.py
src/inkstrip/pipelines/: base.py  image_pipeline.py
src/inkstrip/preprocess/: page_crop.py
src/inkstrip/utils/: geometry.py  logging.py  progress.py
src/inkstrip/web/: app.py
tests/e2e/: test_image_pipeline.py
tests/fixtures/: _make_fixtures.py
tests/unit/: test_loaders.py  test_mask_morph.py  test_mask_ocr_inverse.py  test_page_crop.py  test_tile_blend.py
